--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Lab-27-Vasilev-MapApi-(403)</string>
     <string name="BPlus">+</string>
     <string name="BMinus">-</string>
+    <string name="tv_name">Lab-27-MapApi. Vasilev Daniil, 403</string>
 </resources>
